# excel_pic

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/excel_pic/: __init__.py  gui.py  gui_entry.py
tests/: test_core.py
