[project]
name = "excel-pic"
version = "0.1.0"
description = "Generate episode Excel with embedded images"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pillow>=12.1.1",
    "python-docx>=1.2.0",
    "regex>=2026.2.19",
    "typer>=0.24.1",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
    "pytest>=8.4.2",
]

[project.scripts]
excel-pic = "excel_pic:run"
excel-pic-gui = "excel_pic.gui:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
